--- a/Training/style.css
+++ b/Training/style.css
@@ -2,13 +2,7 @@ body {
     font-family: Poppins, Arial, sans-serif;
     height: 100vh;
     background: linear-gradient(0deg, rgb(15, 12, 41) 0%, rgb(48, 43, 99) 50%, rgb(36, 36, 62) 100%);
-}
-
-h1 {
-    color: white;
-    text-align: center;
-    font-weight: 600;
-    margin: 0px;
+    padding: 0;
 }
 
 .title {
@@ -16,10 +10,17 @@ h1 {
     top: 0px;
     left: 50%;
     transform: translateX(-50%);
-    max-height: 5rem;
-    width: 50rem;
+    max-height: 6rem;
+    width: calc(100vw - 2rem);
+    margin-top: .5rem;
     background-color: rgb(101, 78, 163);
-    margin: 15px 0px;
     padding: 0.5rem;
     border-radius: 1rem;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-weight: 600;
+    margin: 0px;
 }
