--- a/Projects/SevenShop/style/global-style.css
+++ b/Projects/SevenShop/style/global-style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -5,25 +10,27 @@ body {
     background: linear-gradient(0deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 50%, rgba(36,36,62,1) 100%);
 }
 
+.container {
+    margin: 2rem;
+    border: 0.625rem solid white;
+    border-radius: 2.1rem;
+    background: rgba(101,78,163,1);
+}
+
 .header {
-    position: relative;
-    padding: 0;
-    max-width: 100%;
-    height: 70px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: none;
-    border-bottom-right-radius: none;
-    line-height: 5px;
+    height: 4.375rem;
+    border-top-left-radius: 1.25rem;
+    border-top-right-radius: 1.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title { 
     font-family: 'Dancing Script', Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    bottom: 50%;
+    font-size: 2.5rem;
     font-weight: bold;
-    margin-left: 5%;
-    float: left;
+
 }
 
 .title a, .menu-buttons a {
@@ -61,30 +68,14 @@ body {
     flex-direction: column;
 }
 
-.container {
-    width: 95vw;
-    margin: auto;
-    margin-top: 1.8rem;
-    margin-bottom: 1.8rem;
-    border: 10px solid white;
-    border-top-right-radius: 35px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    border-bottom-left-radius: 35px;
-    background: rgba(101,78,163,1);
-}
-
 .page {
-    position: relative;
-    margin: auto;
-    max-width: 95%;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    border-radius: 20px;
+    overflow: hidden;
+    margin: 1.5rem;
+    border-radius: 20px; 
     box-shadow: 8px 8px 15px 12px rgba(5, 5, 5, 0.205);
 }
 
-.text  {
+.text {
     height: 100%;
     width: 100%;
     padding-left: 10px;
@@ -135,56 +126,42 @@ footer {
 .email-collect {
     background-color:#003a6a;
     margin: auto;
-    margin-top: 35px;
-    padding: 15px;
-    margin-bottom: 0;
+    padding: 2rem;
 }
 
 .content-email-collect {
-    max-width: 90%;
+    max-width: 100vw;
     margin: auto;
     text-align: center;
-    max-width: 100%;
-    margin-left: 12.5%;
-    margin-right: 8%;
 }
 
 .desc {
-    max-width: 95%;
-    float: left;
+    margin: auto;
 }
 
 .subtitle {
     text-align: center;
-    font-size: 18px;
-    margin-top: 0;
-    margin-right: 140px;
-    margin-bottom: 0;
+    font-size: 1.5rem;
     line-height: 50%;
     color: white;
-    float: left;
-    padding-top: 12px;
+    margin: 0 0 0.8rem 0;
 }
 
 .offers {
     text-align: center;
-    margin-top: 0px;
-    font-size: 10px;
-    margin-right: 70px;
+    font-size: .8rem;
     line-height: 50%;
     color: white;
-    float: left;
-    padding-top: 13px;
-}
+    margin: 0 0 0.8rem 0;}
 
 .name, .email, .submit {
-    width: 25%;
-    padding: 15px 24px;
+    width: 15rem;
+    padding: 1.25rem 1.5rem;
     border: none;
     margin: 5px;
-    margin-right: 30px;
-    border-radius: 3px;
     box-sizing: border-box;
+    border-radius: .5rem;
+    margin: .2rem;
 }
 
 .name, .email:focus-visible {
@@ -193,35 +170,34 @@ footer {
 
 input[type=submit] {
     color: white;
-    font-size: 14px;
-    max-width: 18%;
+    font-size: 1rem;
+    width: 15rem;
     background-color: rgba(168, 83, 248, 0.61);
     font-weight: bold;
-    margin-right: 0;
     background-image: url(../images/mail-send-envelope.png);
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: calc(0% + 20px) center;
 }
 
-input[type=submit] :hover {
+input[type=submit]:hover {
     background-color: #e65c01;
     cursor: pointer;
 }
 
 #contacts {
     margin: auto;
-    padding: 15px;
+    padding: 2rem;
 }
 
 .contacts-list {
-    margin: auto;
-    margin-left: 13rem;
+    margin: 1rem;
 }
 
 .contact-title {
     color: white;
     font-size: 16px;
+    margin-bottom: .5rem;
 }
 
 .contacts-list {
@@ -243,7 +219,7 @@ input[type=submit] :hover {
 
 .icon1, .icon2, .icon3 {
     margin-left: 0;
-    padding-left: 28px;
+    padding-left: 1.6rem;
 }
 
 .icon1 {
