--- a/Projects/SevenShop/style/products.css
+++ b/Projects/SevenShop/style/products.css
@@ -1,23 +1,17 @@
-.product {
-    width: 290px;
-    height: 440px;
-    margin: 25px;
-    display: inline-block;
-}
-
 .description {
-    line-height: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    line-height: 1.25rem;
+    padding: .8rem;
     text-align: left;
     color: white;
+}
+
+.description h4{
+    margin-bottom: .8rem;
 }
 
 .old-price {
     color: rgb(214, 214, 214);
     text-decoration: line-through;
-    padding: 0;
-    margin: 0;
 }
 
 .new-price {
@@ -35,51 +29,52 @@
     margin-bottom: 40px;
 }
 
+.buy-button {
+    background-color: rgba(168, 83, 248, 0.61);
+    border-radius: .5rem;
+    text-align: center;
+}
+
 .buy {
     font-family: Poppins, sans-serif;
-    font-size: 15px;
-    width: 100%;
-    height: 50px;
-    margin: auto;
+    font-size: .938rem;
+    height: 3.125rem; 
     font-weight: bold;
-    background-color: rgba(168, 83, 248, 0.61);
     border: none;
-    border-radius: 8px;
-    text-align: center;
-    line-height: 50px;
-    cursor: pointer;
+    background-color: transparent;
     color: white;
+}
+
+.buy-button:hover, .buy:hover {
+    border-radius: .5rem;
+    background-color: #ff6500;
+    cursor: pointer;
+}
+
+.icon-buy {
     background-image: url(../images/shopping-cart-1.png);
-    background-size: 20px;
+    background-size: 1.25rem;
     background-repeat: no-repeat;
     background-position: calc(0% + 20px) center;
 }
 
-.buy:hover {
-    background-color: #ff6500;
-}
-
 .img-offer{
     margin: auto;
-    padding-top: 10px;
-    max-width: 55%;
+    max-width: 10rem;
 }
 
 .products {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     list-style: none;
-    overflow: hidden;
-    margin: 0;
-    padding: 2rem 5rem;
     background-color: rgba(74, 51, 139, 0.2);
 }
 
 .products li {
     display: flex;
     flex-direction: column;
-    margin: 1rem;
     padding: .8rem;
+    margin: 1rem;
     border-radius: 8px;
     border: 2px solid rgba(255, 255, 255, 0.4);
 }
