--- a/Projects/SevenShop/style/global-style.css
+++ b/Projects/SevenShop/style/global-style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-    margin: 2rem;
+    margin: .8rem;
     border: 0.625rem solid white;
     border-radius: 2.1rem;
     background: rgba(101,78,163,1);
@@ -39,38 +39,16 @@ body {
 }
 
 .search {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 2.5rem;
-    width: 35rem;
+    display: none;
 }
 
 .menu-buttons {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    position: absolute;
-    top: 50%;
-    right: 0; 
-    transform: translateY(-50%);
-    list-style: none;
-    margin: 0 1rem;
-    padding: 0;
-    font-size: 18px;
-    font-weight: bold;
-
-}
-
-.menu-buttons li {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+    display: none;
 }
 
 .page {
     overflow: hidden;
-    margin: 1.5rem;
+    margin: .5rem;
     border-radius: 20px; 
     box-shadow: 8px 8px 15px 12px rgba(5, 5, 5, 0.205);
 }
@@ -212,7 +190,6 @@ input[type=submit]:hover {
 
 .link1, .link2, .link3 {
     font-weight: 400;
-    /* padding-right: 50px; */
     text-decoration: none;
     color: white;
 }
