--- a/Training/style.css
+++ b/Training/style.css
@@ -18,9 +18,18 @@ body {
     border-radius: 1rem;
 }
 
-h1 {
+.title h1 {
     color: white;
     text-align: center;
     font-weight: 600;
     margin: 0px;
+}
+
+.aula{
+    color: white;
+    text-align: center;
+}
+
+.resposta {
+    margin: .8rem;
 }
