--- a/Projects/SevenShop/style/media-queries.css
+++ b/Projects/SevenShop/style/media-queries.css
@@ -1,7 +1,3 @@
-@media screen and (min-width: 380px) {
-
-}
-
 @media screen and (min-width: 636px) {
     .products {
         display: grid;
@@ -11,13 +7,6 @@
     .products li {
         margin: 1rem;
     }
-    .search {
-        display: none;
-    }
-    .menu-buttons {
-        display: none;
-    }
-
 }
 
 @media screen and (min-width: 980px) {
@@ -28,12 +17,18 @@
     .page{
         margin: 1.5rem;
     }
-    .products {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        padding: 1rem;
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
-
+    .title {
+        float: left;
+    }
+    .title a{
+        padding: 0.625rem;
+        margin: 1rem;
+    }
     .search {
         display: grid;
         height: 2.5rem;
@@ -52,28 +47,35 @@
         display: flex;
         flex-direction: column;
     }
-    .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    .products {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 1rem;
     }
+}
 
-    .title {
-        float: left;
-    }
+@media screen and (min-width: 1490px) {
 
     .title a{
         padding: 0.625rem;
-        margin: 1rem;
+        margin: 0 0 0 5rem;
     }
-
-}
-
-@media screen and (min-width: 1240px) {
-
+    .menu-buttons {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0 5rem 0 0;
+        list-style: none;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .menu-buttons li {
+        padding: 0.625rem;
+        display: flex;
+        flex-direction: column;
+    }
     .products {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         padding: 1rem;
     }
     .products li {
