--- a/Projects/SevenShop/style/products.css
+++ b/Projects/SevenShop/style/products.css
@@ -16,7 +16,7 @@
 
 .new-price {
     font-size: 22px;
-    color: #ff6500;
+    color: rgb(0, 183, 255);
     padding: 0;
     margin: 0;
     margin-top: 2px;
@@ -30,7 +30,7 @@
 }
 
 .buy-button {
-    background-color: rgba(168, 83, 248, 0.61);
+    background: linear-gradient(135deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
     border-radius: .5rem;
     text-align: center;
 }
@@ -45,9 +45,13 @@
     color: white;
 }
 
-.buy-button:hover, .buy:hover {
+.buy:hover {
+    cursor: pointer;
+}
+
+.buy-button:hover {
     border-radius: .5rem;
-    background-color: #ff6500;
+    background: linear-gradient(315deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
     cursor: pointer;
 }
 
@@ -68,16 +72,15 @@
     display: grid;
     grid-template-columns: 1fr;
     list-style: none;
-    background-color: rgba(74, 51, 139, 0.2);
 }
 
 .products li {
+    background: linear-gradient(135deg, rgba(46,0,78,0.5) 50%, rgba(125,0,180,0.5) 100%);
     display: flex;
     flex-direction: column;
     padding: .8rem;
     margin: 1rem;
     border-radius: 8px;
-    border: 2px solid rgba(255, 255, 255, 0.4);
 }
 
 .products :hover {
