--- a/Projects/SevenShop/style/global-style.css
+++ b/Projects/SevenShop/style/global-style.css
@@ -3,11 +3,18 @@
     padding: 0;
 }
 
-body {
+.body {
     margin: 0px;
     padding: 0px;
     font-family: Poppins, sans-serif;
     background: linear-gradient(0deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 50%, rgba(36,36,62,1) 100%);
+}
+
+.body_whiteTheme {
+    margin: 0px;
+    padding: 0px;
+    font-family: Poppins, sans-serif;
+    background-color: white;
 }
 
 .container {
@@ -32,7 +39,6 @@ body {
     font-family: 'Dancing Script', Arial, Helvetica, sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
-
 }
 
 .title a, .menu-buttons a {
@@ -48,11 +54,8 @@ body {
     display: none;
 }
 
-.page {
-    overflow: hidden;
-    margin: .5rem;
-    border-radius: 20px; 
-    box-shadow: 8px 8px 15px 12px rgba(5, 5, 5, 0.205);
+.toggle, .toggle_button{
+    display: none;
 }
 
 .text {
