--- a/Project SevenShop/style/global-style.css
+++ b/Project SevenShop/style/global-style.css
@@ -14,7 +14,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Poppins, sans-serif;
-    background-color: white;
+    background-image: linear-gradient(180deg, #0093E9 0%, #014d9b 100%);
 }
 
 .container {
@@ -22,6 +22,15 @@
     border: 0.4rem solid white;
     border-radius: 2rem;
     background: linear-gradient(180deg, rgb(46 0 78) 0%, rgb(84 0 133) 100%);
+    overflow: hidden;
+}
+
+.container_whiteTheme {
+    margin: .8rem;
+    border: 0.4rem solid rgb(1, 116, 184);
+    border-radius: 2rem;
+    background-image: linear-gradient(135deg, #1e2f61 0%, #82a3ff 50%, #88a1e5 100%);
+    overflow: hidden;
 }
 
 .header {
@@ -32,6 +41,17 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(70, 2, 119, 0.5);
+    margin: 2rem 2rem 0rem 2rem;
+}
+
+.header_whiteTheme{
+    height: 4.5rem;   
+    border-top-left-radius: 1.25rem;
+    border-top-right-radius: 1.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 33, 94, 0.5);
     margin: 2rem 2rem 0rem 2rem;
 }
 
@@ -92,6 +112,7 @@
 .content {
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    overflow: hidden;
 }
 
 footer {
@@ -129,34 +150,44 @@ footer {
     color: white;
     margin: 0 0 0.8rem 0;}
 
-.name, .email, .submit {
+.input-name, .input-email, .input-submit {
     width: 15rem;
-    padding: 1.25rem 1.5rem;
+    height: 3.5rem;
     border: none;
-    margin: 5px;
     box-sizing: border-box;
     border-radius: .5rem;
     margin: .2rem;
 }
 
-.name, .email:focus-visible {
+.input-name, .input-email:focus-visible {
     outline: none;
 }
 
-input[type=submit] {
-    color: white;
-    font-size: 1rem;
-    width: 15rem;
-    background-color: rgba(168, 83, 248, 0.61);
-    font-weight: bold;
-    background-image: url(../images/mail-send-envelope.png);
-    background-size: 1.25rem;
-    background-repeat: no-repeat;
-    background-position: calc(0% + 1.25rem) center;
+.submit button img {
+    width: 1.5rem;
+    margin: 0 0 0 1rem;
 }
 
-input[type=submit]:hover {
-    background-color: #e65c01;
+.input-submit p {
+    margin: auto;
+    padding: 0 1rem 0 0;
+}
+
+.input-submit {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 15rem;
+    height: 3.5rem;
+    color: white;
+    font-size: 1rem;
+    background: linear-gradient(135deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
+    font-weight: bold;
+}
+
+.input-submit:hover {
+    background: linear-gradient(315deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
     cursor: pointer;
 }
 
