--- a/Project SevenShop/style/media-queries.css
+++ b/Project SevenShop/style/media-queries.css
@@ -3,6 +3,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+    .products_whiteTheme{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media screen and (min-width: 980px) {
@@ -11,6 +15,11 @@
         margin: 2rem;
     }
     .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .header_whiteTheme{
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -86,11 +95,18 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
+    .products_whiteTheme{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 @media screen and (min-width: 1490px) {
 
     .container {
+        margin: 1% 6rem 1rem 6rem;
+    }
+    .container_whiteTheme {
         margin: 1% 6rem 1rem 6rem;
     }
     .title a{
@@ -114,6 +130,10 @@
         margin: 0 5rem 0 0;
     }
     .products {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+    .products_whiteTheme{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
