--- a/Project SevenShop/style/global-style.css
+++ b/Project SevenShop/style/global-style.css
@@ -119,44 +119,47 @@ footer {
     background-color: #004d8e;
 }
 
-.email-collect {
+.email-collect{
+    font-size: 0;
     background-color:#003a6a;
-    margin: auto;
-    padding: 2rem;
+    padding: 0.8rem;
 }
 
-.content-email-collect {
-    max-width: 100vw;
-    margin: auto;
-    text-align: center;
+.collect-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .desc {
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.subtitle {
-    text-align: center;
+.desc h6 {
     font-size: 1.5rem;
-    line-height: 50%;
     color: white;
-    margin: 0 0 0.8rem 0;
 }
 
-.offers {
-    text-align: center;
+.desc h5 {
     font-size: .8rem;
-    line-height: 50%;
     color: white;
-    margin: 0 0 0.8rem 0;}
+    margin: 0 0 .5rem 0;
+}
 
 .input-name, .input-email, .input-submit {
-    width: 15rem;
-    height: 3.5rem;
+    width: 25rem;
+    height: 3.2rem;
     border: none;
     box-sizing: border-box;
     border-radius: .5rem;
     margin: .2rem;
+}
+
+.input-name, .input-email{
+    padding: .5rem;
 }
 
 .input-name, .input-email:focus-visible {
@@ -164,7 +167,7 @@ footer {
 }
 
 .submit button img {
-    width: 1.5rem;
+    width: 1.4rem;
     margin: 0 0 0 1rem;
 }
 
@@ -174,12 +177,10 @@ footer {
 }
 
 .input-submit {
-    margin: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 15rem;
-    height: 3.5rem;
+    width: 25rem;
+    height: 3.2rem;
     color: white;
     font-size: 1rem;
     background: linear-gradient(135deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
@@ -192,58 +193,54 @@ footer {
 }
 
 #contacts {
-    margin: auto;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem .8rem 1rem .8rem;
 }
 
 .contacts-list {
-    margin: 1rem;
-}
-
-.contact-title {
-    color: white;
-    font-size: 16px;
-    margin-bottom: .5rem;
-}
-
-.contacts-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
     list-style: none;
 }
 
-.contact {
+.contacts-list li {
+    display: flex;
     color: white;
-    margin-bottom: 10px;
+    margin: .3rem 0 .3rem 0;
     font-weight: bold;
 }
 
-.link1, .link2, .link3 {
+.contacts-list li span {
+    display: flex;
+    align-items: center;
+}
+
+.contacts-list li span p {
+    margin: 0 .2rem 0 0;
+}
+
+.contacts-list li div {
+    display: flex;
+    justify-content: center;
+    margin: .5rem;
+}
+
+.contacts-list li img {
+    width: 1.4rem;
+}
+
+.contacts-list li a {
     font-weight: 400;
     text-decoration: none;
     color: white;
 }
 
-.icon1, .icon2, .icon3 {
-    margin-left: 0;
-    padding-left: 1.6rem;
-}
-
-.icon1 {
-    background-image: url(../images/recording-tape-2.png);
-    background-size: 20px;
-    background-repeat: no-repeat;
-    background-position: calc(0% - 0px) center;
-}
-
-.icon2 {
-    background-image: url(../images/whatsapp.png);
-    background-size: 20px;
-    background-repeat: no-repeat;
-    background-position: calc(0% - 0px) center;
-}
-
-.icon3 {
-    background-image: url(../images/mail-send-envelope.png);
-    background-size: 20px;
-    background-repeat: no-repeat;
-    background-position: calc(0% - 0px) center;
+.contacts-list h6 {
+    color: white;
+    font-size: 1rem;
+    margin: .3rem .5rem .3rem .5rem;
 }
