--- a/Project SevenShop/style/global-style.css
+++ b/Project SevenShop/style/global-style.css
@@ -4,15 +4,15 @@
 }
 
 .body {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: Poppins, sans-serif;
     background: linear-gradient(0deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 50%, rgba(36,36,62,1) 100%);
 }
 
 .body_whiteTheme {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: Poppins, sans-serif;
     background-image: linear-gradient(180deg, #0093E9 0%, #014d9b 100%);
 }
@@ -81,14 +81,14 @@
 .text {
     height: 100%;
     width: 100%;
-    padding-left: 10px;
+    padding-left: 0.625rem;
     background-color: white;
     background-image: url(../images/search.png);
-    background-size: 18px;
+    background-size: 1.125rem;
     background-repeat: no-repeat;
-    background-position: calc(100% - 10px) center;
+    background-position: calc(100% - 0.625rem) center;
     border: none;
-    border-radius: 15px;
+    border-radius: 1rem;
     box-sizing: border-box;
 }
 
@@ -106,12 +106,12 @@
     background-repeat: no-repeat;
     margin: 0rem 2rem 0rem 2rem;
     border-radius: 0rem 0rem .5rem .5rem;
-    height: 500px;
+    height: 31rem;
 }
 
 .content {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 1.25rem;
+    border-bottom-right-radius: 1.25rem;
     overflow: hidden;
 }
 
@@ -149,7 +149,7 @@ footer {
     margin: 0 0 .5rem 0;
 }
 
-.input-name, .input-email, .input-submit {
+.input-name, .input-email, .input-submit, .input-submit_whiteTheme {
     width: 25rem;
     height: 3.2rem;
     border: none;
@@ -176,6 +176,11 @@ footer {
     padding: 0 1rem 0 0;
 }
 
+.input-submit_whiteTheme p {
+    margin: auto;
+    padding: 0 1rem 0 0;
+}
+
 .input-submit {
     display: flex;
     align-items: center;
@@ -187,8 +192,24 @@ footer {
     font-weight: bold;
 }
 
+.input-submit_whiteTheme {
+    display: flex;
+    align-items: center;
+    width: 25rem;
+    height: 3.2rem;
+    color: white;
+    font-size: 1rem;
+    background: linear-gradient(135deg, rgba(0,33,94,.5) 0%, rgba(0,40,116,.5) 30%, rgba(0,49,143,.5) 50%, rgba(0,63,180,.5) 70%, rgba(0,72,204,.5) 100%);
+    font-weight: bold;
+}
+
 .input-submit:hover {
     background: linear-gradient(315deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
+    cursor: pointer;
+}
+
+.input-submit_whiteTheme:hover {
+    background: linear-gradient(135deg, rgba(0,72,204,.5) 0%, rgba(0,63,180,.5) 30%, rgba(0,49,143,.5) 50%, rgba(0,40,116,.5) 70%, rgba(0,33,94,.5) 100%);
     cursor: pointer;
 }
 
