--- a/assets/style/global-style.css
+++ b/assets/style/global-style.css
@@ -120,6 +120,9 @@ footer {
 }
 
 .email-collect{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
     font-size: 0;
     background-color:#003a6a;
     padding: 0.8rem;
@@ -130,66 +133,83 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: .5rem;
+    gap: .5rem;
 }
 
-.desc {
+.collect-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.desc h6 {
+.collect-title h6 {
     font-size: 1.5rem;
+    text-align: center;
     color: white;
 }
 
-.desc h5 {
+.collect-title h5 {
     font-size: .8rem;
+    text-align: center;
     color: white;
-    margin: 0 0 .5rem 0;
-}
-
-.input-name, .input-email, .input-submit, .input-submit_whiteTheme {
-    width: 25rem;
-    height: 3.2rem;
-    border: none;
-    box-sizing: border-box;
-    border-radius: .5rem;
-    margin: .2rem;
-}
-
-.input-name, .input-email{
-    padding: .5rem;
 }
 
 .input-name, .input-email:focus-visible {
     outline: none;
 }
 
-.submit button img {
-    width: 1.4rem;
-    margin: 0 0 0 1rem;
+.input-submit {
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    align-items: center;
+    width: 23rem;
+    height: 3rem;
+    color: white;
+    font-size: 1rem;
+    background: linear-gradient(135deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
+    font-weight: bold;
+    border: none;
+    border-radius: .5rem;
 }
 
 .input-submit p {
     margin: auto;
-    padding: 0 1rem 0 0;
+}
+
+.send {
+    width: 1.4rem;
+}
+
+.collect-answers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.answers-content {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.answers-content input {
+    border-radius: .5rem;
+    padding: .5rem;
+    width: 22rem;
+    height: 2rem;
+    border: none;
+}
+
+.answers-content input:focus-visible{
+    outline: none;
 }
 
 .input-submit_whiteTheme p {
     margin: auto;
     padding: 0 1rem 0 0;
-}
-
-.input-submit {
-    display: flex;
-    align-items: center;
-    width: 25rem;
-    height: 3.2rem;
-    color: white;
-    font-size: 1rem;
-    background: linear-gradient(135deg, rgba(46,0,78,0.5) 30%, rgba(125,0,180,0.5) 100%);
-    font-weight: bold;
 }
 
 .input-submit_whiteTheme {
