--- a/assets/style/products.css
+++ b/assets/style/products.css
@@ -107,9 +107,12 @@
     text-align: center;
 }
 
-.products li button {
+.buy-button {
+    padding: 0 .8rem 0 .8rem;
+}
+
+.buy {
     margin: auto;
-    padding: 0 1rem 0 0rem;
     font-family: Poppins, sans-serif;
     font-size: .938rem;
     height: 3.125rem; 
@@ -156,7 +159,6 @@
 }
 
 .products li div img {
-    padding: 0 0 0 1rem;
     width: 1.25rem;
     background: transparent;
 }
