--- a/assets/style/global-style.css
+++ b/assets/style/global-style.css
@@ -41,7 +41,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(70, 2, 119, 0.5);
-    margin: 2rem 2rem 0rem 2rem;
+    margin: 1rem 1rem 0rem 1rem;
 }
 
 .header_whiteTheme{
@@ -52,7 +52,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 33, 94, 0.5);
-    margin: 2rem 2rem 0rem 2rem;
+    margin: 1rem 1rem 0rem 1rem;
 }
 
 .title { 
@@ -104,9 +104,9 @@
     background-image: url(../images/Banner.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    margin: 0rem 2rem 0rem 2rem;
+    margin: 0rem 1rem 0rem 1rem;
     border-radius: 0rem 0rem .5rem .5rem;
-    height: 31rem;
+    height: 18rem;
 }
 
 .content {
@@ -122,6 +122,7 @@ footer {
 .email-collect{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: .5rem;
     font-size: 0;
     background-color:#003a6a;
@@ -174,6 +175,21 @@ footer {
     border-radius: .5rem;
 }
 
+.input-submit_whiteTheme {
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    align-items: center;
+    width: 23rem;
+    height: 3rem;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    border-radius: .5rem;
+    background: linear-gradient(135deg, rgba(0,33,94,.5) 0%, rgba(0,40,116,.5) 30%, rgba(0,49,143,.5) 50%, rgba(0,63,180,.5) 70%, rgba(0,72,204,.5) 100%);
+}
+
 .input-submit p {
     margin: auto;
 }
@@ -210,17 +226,6 @@ footer {
 .input-submit_whiteTheme p {
     margin: auto;
     padding: 0 1rem 0 0;
-}
-
-.input-submit_whiteTheme {
-    display: flex;
-    align-items: center;
-    width: 25rem;
-    height: 3.2rem;
-    color: white;
-    font-size: 1rem;
-    background: linear-gradient(135deg, rgba(0,33,94,.5) 0%, rgba(0,40,116,.5) 30%, rgba(0,49,143,.5) 50%, rgba(0,63,180,.5) 70%, rgba(0,72,204,.5) 100%);
-    font-weight: bold;
 }
 
 .input-submit:hover {
