--- a/assets/style/media-queries.css
+++ b/assets/style/media-queries.css
@@ -9,7 +9,7 @@
     }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1420px) {
 
     .container{
         margin: 2rem;
@@ -18,6 +18,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 2rem 2rem 0 2rem;
     }
     .header-content {
         display: flex;
@@ -29,6 +30,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 2rem 2rem 0 2rem;
     }
     .title {
         float: left;
@@ -98,17 +100,67 @@
     .toggle:checked + .toggle_button::after{
         left: 1.6rem;
     }
+
+    .image {
+        margin: 0 2rem 0 2rem;
+        height: 31rem;
+    }
+
     .products {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        margin: 1rem;
     }
+
+    .products li {
+        margin: 1rem;
+    }
+
     .products_whiteTheme{
         display: grid;
+        margin: 1rem;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .products_whiteTheme li {
+        margin: 1rem;
+    }
+
+    .email-collect, .collect-content, .collect-answers, .answers-content {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .collect-title h5 {
+        text-align: left;
+    }
+
+    .email-collect {
+        gap: 2rem;
+        padding: .5rem 11.5rem .5rem 11.5rem;
+    }
+
+    .collect-answers {
+        margin: auto;
+    }
+
+    .answers-content {
+        gap: 1rem;
+    }
+
+    .input-submit_whiteTheme {
+        width: 18rem;
+        height: 3.1rem;
+    }
+    #contacts {
+        padding: 2rem 6rem 2rem 6rem;
+    }
+    .contacts-list{
+        margin: 0 5rem 0 5rem;
     }
 }
 
-@media screen and (min-width: 1490px) {
+@media screen and (min-width: 1640px) {
 
     .container {
         margin: 1rem 6rem 1rem 6rem;
@@ -144,37 +196,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
-
-    .email-collect, .collect-content, .collect-answers, .answers-content {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .collect-title h5 {
-        text-align: left;
-    }
-
+    
     .email-collect {
         gap: 0;
-        padding: .5rem 11.5rem .5rem 11.5rem;
-    }
-
-    .collect-answers {
-        margin: auto;
-    }
-
-    .answers-content {
-        gap: 1rem;
-    }
-    
-    .input-submit_whiteTheme {
-        width: 18rem;
-        height: 3.1rem;
-    }
-    #contacts {
-        padding: 2rem 6rem 2rem 6rem;
-    }
-    .contacts-list{
-        margin: 0 5rem 0 5rem;
     }
 }
