--- a/assets/style/products.css
+++ b/assets/style/products.css
@@ -2,14 +2,14 @@
     display: grid;
     grid-template-columns: 1fr;
     list-style: none;
-    margin: 1rem;
+    margin: .5rem;
 }
 
 .products_whiteTheme {
     display: grid;
     grid-template-columns: 1fr;
     list-style: none;
-    margin: 1rem;
+    margin: .5rem;
 }
 
 .products li {
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     padding: .8rem;
-    margin: 1rem;
+    margin: .5rem;
     border-radius: .5rem;
 }
 
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     padding: .8rem;
-    margin: 1rem;
+    margin: .5rem;
     border-radius: .5rem;
 }
 
