--- a/assets/style/main-style.css
+++ b/assets/style/main-style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-.body {
+body {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
@@ -17,7 +17,7 @@
     background-image: linear-gradient(180deg, #0093E9 0%, #014d9b 100%);
 }
 
-.container {
+.main_container {
     margin: .8rem;
     border: 0.4rem solid white;
     border-radius: 2rem;
@@ -25,7 +25,7 @@
     overflow: hidden;
 }
 
-.container_whiteTheme {
+.main_container_whiteTheme {
     margin: .8rem;
     border: 0.4rem solid rgb(1, 116, 184);
     border-radius: 2rem;
@@ -33,7 +33,7 @@
     overflow: hidden;
 }
 
-.header {
+.main_header {
     height: 4.5rem;   
     border-top-left-radius: 1.25rem;
     border-top-right-radius: 1.25rem;
@@ -44,7 +44,7 @@
     margin: 1rem 1rem 0rem 1rem;
 }
 
-.header_whiteTheme{
+.main_header_whiteTheme{
     height: 4.5rem;   
     border-top-left-radius: 1.25rem;
     border-top-right-radius: 1.25rem;
