--- a/assets/style/main-style.css
+++ b/assets/style/main-style.css
@@ -7,14 +7,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
-    background: linear-gradient(0deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 50%, rgba(36,36,62,1) 100%);
+    background: linear-gradient(0deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 50%, rgba(15,12,41,1) 100%);
 }
 
 .body_whiteTheme {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
-    background-image: linear-gradient(180deg, #0093E9 0%, #014d9b 100%);
+    background-image: linear-gradient(180deg, #014d9b 100%, #0093E9 0%, #014d9b 100%);
 }
 
 .main_container {
