--- a/assets/style/cadaster-style.css
+++ b/assets/style/cadaster-style.css
@@ -103,6 +103,11 @@ body {
     color: white;
 }
 
+.login-content a:hover{
+    text-decoration: underline;
+    color: rgb(0, 255, 200);
+}
+
 .input-cadaster-submit{
     height: 3rem;
     color: white;
