--- a/assets/style/main-products-style.css
+++ b/assets/style/main-products-style.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     padding: .8rem;
-    /* margin: .5rem; */
+    margin: .5rem;
     border-radius: .5rem;
 }
 
