--- a/assets/style/main-media-queries.css
+++ b/assets/style/main-media-queries.css
@@ -14,6 +14,9 @@
     .main_container{
         margin: 2rem;
     }
+    .main_container_whiteTheme{
+        margin: 2rem;
+    }
     .main_header {
         display: flex;
         align-items: center;
@@ -118,8 +121,7 @@
 
     .products_whiteTheme{
         display: grid;
-        /* margin: 1rem; */
-        margin-top: 0;
+        margin: 1rem;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
